# picture-of-the-day

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  de.swsnr.picture-of-the-day.desktop.in  de.swsnr.pictureoftheday.desktop  de.swsnr.pictureoftheday.desktop.in  de.swsnr.pictureoftheday.gschema.xml  de.swsnr.pictureoftheday.metainfo.xml  deny.toml  justfile
.github/ISSUE_TEMPLATE/: 01-maintainer.md  config.yml
.github/workflows/: gettext.yml  image.yml  release.yml  test.yml
dbus-1/: de.swsnr.picture-of-the-day.service  de.swsnr.pictureoftheday.service
flatpak/: de.swsnr.pictureoftheday.Devel.yaml  de.swsnr.pictureoftheday.cargo-sources.json  de.swsnr.pictureoftheday.yaml
po/: LINGUAS  de.po  de.swsnr.picture-of-the-day.pot  de.swsnr.pictureoftheday.pot  es.po  et.po  fi.po  fr.po  nl.po  pt.po  pt_BR.po  ru.po  zh_Hans.po
resources/: de.swsnr.picture-of-the-day.metainfo.xml.in  de.swsnr.pictureoftheday.metainfo.xml.in  resources.data.gresource.xml  resources.generated.gresource.xml  resources.gresource.xml  shortcuts-dialog.blp
resources/gtk/: help-overlay.blp  help-overlay.ui
resources/stalenhag/: collections.json
resources/ui/: application-window.blp  application-window.ui  error-notification-page.blp  error-notification-page.ui  image-page.blp  image-page.ui  images-carousel.blp  images-carousel.ui  picture-of-the-day-window.blp  picture-of-the-day-window.ui  preferences-dialog.blp  preferences-dialog.ui  source-row.blp  source-row.ui
schemas/: de.swsnr.picture-of-the-day.gschema.xml  de.swsnr.pictureoftheday.gschema.xml
screenshots/: run-for-screenshot.bash  social-image.bash
scripts/: prerelease.py  scrape-stalenhag.ts  social-image.bash
src/: app.rs  config.rs  date.rs  dbus.rs  download.rs  gettext.rs  i18n.rs  image.rs  images.rs  io.rs  main.rs  net.rs  portal.rs  rng.rs  rss.rs  services.rs  source.rs  xml.rs
src/app/: model.rs  scheduler.rs  session_monitor.rs  updated_monitor.rs  widgets.rs
src/app/model/: error_notification.rs  image.rs  image_download.rs
src/app/widgets/: application_window.rs  error_notification_page.rs  image_page.rs  images_carousel.rs  preferences_dialog.rs  source_row.rs  sourcerow.rs  window.rs
src/i18n/: gettext.rs  locale.rs
src/image/: download.rs  obj.rs
src/images/: image.rs  source.rs  sources.rs
src/images/source/: error.rs  testutil.rs
src/images/sources/: apod.rs  bing.rs  eoiod.rs  epod.rs  stalenhag.rs  wikimedia.rs
src/net/: http.rs
src/net/http/: download.rs
src/portal/: background.rs  client.rs  request.rs  wallpaper.rs  window.rs
src/services/: logind.rs  portal.rs  session_monitor.rs
src/services/portal/: background.rs  client.rs  wallpaper.rs  window.rs
src/source/: apod.rs  bing.rs  eoiod.rs  epod.rs  error.rs  http.rs  stalenhag.rs  testutil.rs  wikimedia.rs
src/xml/: rss.rs
supply-chain/: audits.toml  config.toml
