[package]
name = "pictureoftheday"
description = "A fresh picture of the day as your desktop wallpaper "
homepage = "https://github.com/swsnr/picture-of-the-day"
repository = "https://github.com/swsnr/picture-of-the-day"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
# Our version number.  Since semver doesn't make much sense for UI applications
# which have no API we repurpose the version numer as follows:
#
# - major: Major new features or major changes to the UI, which may break the app for some users.
# - minor: User-visible features or bugfixes.
# - patch: Translation updates.
#
# Major and minor releases get release notes, but patch releases do not; this
# enables us to ship updates to translations whenever translators contributed
# new languages or made major updates, while still providing meaningful release
# notes for the last functional changes.
version = "1.4.0"
edition = "2024"
publish = false
build = "build.rs"
default-run = "pictureoftheday"

[features]
# Guards the internal binary for scraping sources
scraper = ["dep:indexmap", "indexmap/serde", "url/serde"]

[dependencies]
adw = { package = "libadwaita", version = "0.7.0", features = ["v1_7"] }
async-channel = "2.3.1"
jiff = { version = "0.2.10", default-features = false, features = [
    "std",
    "serde",
    "perf-inline",
    # We deliberately enable none of the timezone features as we only handle
    # civil dates and don't care about zones at all.
] }
futures = "0.3.31"
gdk4-wayland = { version = "0.9.6", features = ["v4_18"] }
gdk4-x11 = { version = "0.9.6", features = ["v4_18"] }
glib = { version = "0.20.7", features = ["log", "log_macros", "v2_84"] }
gtk = { package = "gtk4", version = "0.9.5", features = ["v4_18", "gnome_47"] }
libc = "0.2.170"
log = "0.4.22"
quick-xml = "0.30.0"
scraper = "0.23.1"
semver = "1.0.24"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.139"
soup = { package = "soup3", version = "0.7.0", features = ["v3_6"] }
strum = { version = "0.27.1", features = ["derive"] }
url = "2.5.4"

# Optional dependencies for the scraper binary
indexmap = { version = "2.7.1", optional = true }

[build-dependencies]
glob = "0.3.1"

[[bin]]
name = "scraper"
required-features = ["scraper"]

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Picture Of The Day {{tag_name}}"
publish = false
verify = false
push = false
sign-tag = true
sign-commit = true
pre-release-hook = ["scripts/prerelease.py", "{{tag_name}}", "{{date}}"]
